# data_engineering_instagram

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: eda.ipynb
src/: cli.py
src/etl/: extract.py  load.py  pipeline.py  transform.py
streamlit_app/: app.py
