[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-engineering-instagram"
version = "0.1.0"
description = "Data Engineering ETL pipeline and analysis for Instagram user activity"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "J4zzyflavor", email = "mrjazzyk@gmail.com" }
]

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "streamlit",
    "pyarrow"
]

[tool.setuptools.packages.find]
where = ["src"]
